--- a/Views/Renderings/News/NewsDetails.cshtml
+++ b/Views/Renderings/News/NewsDetails.cshtml
@@ -21,12 +21,12 @@
 
                     <div class="BlockMainArticle">
                         <h3 class="ArticleTitle DarkScheme">@Model.Title</h3>
-                        <h3 class="ArticleTitle DarkScheme">@Model.Date</h3>
-
-                        <p class="CommonParagraph1  LightScheme">
-                            Summary: @Model.Summary
+                        <h3 class="CommonParagraph1  LightScheme">@Model.Date</h3>
+                        <br />
+                        <p class="ArticleTitle DarkScheme">
+                            @Model.Summary
                         </p>
-
+                        <br />
                         <p class="CommonParagraph1  LightScheme">
                             @Model.Body
                         </p>
