--- a/Views/Renderings/News/NewsList.cshtml
+++ b/Views/Renderings/News/NewsList.cshtml
@@ -19,7 +19,8 @@
                         <a href="@news.NewsDetail" class="ImgNews">@news.Image</a>
                         <div class="NewsText ">
                             <h3 class="H5 FontNews">@news.Title</h3>
-                            <h3 class="H5 FontNews">@news.Date</h3>
+                            <h3 class="LightScheme FontNews">@news.Date</h3>
+                            <br />
                             <p class="LightScheme FontNews">@news.Summary</p>
                         </div>
                     </div>
