--- a/Views/Renderings/Transaction/TransactionDetails.cshtml
+++ b/Views/Renderings/Transaction/TransactionDetails.cshtml
@@ -8,45 +8,19 @@
                 <div class="BackButton">
                     <a href="/TransactionList" title="Back to list" class="BackBtn "><span class="ColorBackBtn">Back to list</span></a>
                 </div>
-                <div class="BlockPageNavigation NavigationButton PaddingTransSearch">
-                    <a href="#" title="Prev" class="BackBtn BackBtnSmall"><span>Prev</span></a>
-                    <div class="CenteringBlock">
-                        <ul class="PagingIndex">
-                            <li>
-                                <a href="#" title="">1</a>
-                            </li>
-                            <li>
-                                <span>2</span>
-                            </li>
-                            <li>
-                                <a href="#" title="">3</a>
-                            </li>
-                            <li>
-                                <a href="#" title="">4</a>
-                            </li>
-                            <li>
-                                <a href="#" title="">5</a>
-                            </li>
-                            <li>
-                                <a href="#" title="">...</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <a href="#" title="Next" class="NextBtn NextBtnSmall"><span>Next</span></a>
-                </div>
                 <div class="HrReplacement HrStyle05 LineNavigation1">
                     <hr class="Hidden" />
                 </div>
                 <div class="ShowImageInfor">
                     <!--add a tag to zoom image-->
-                    <a href="~/Content/images/sample-carousel-img-view-zoom.jpg" title="" class="ShowCaseZoom"><img src="~/Content/images/sample-carousel-img-view.jpg" title="" alt="" class="ShowcaseImg ShowcaseImgMargin " /></a>
-                    @Model.Image
+                    <a href="@Model.ImageUrl" title="" class="ShowCaseZoom"><img src="@Model.ImageUrl" title="" alt="" class="ShowcaseImg ShowcaseImgMargin " /></a>
+                    
                     <!--add a tag to zoom image-->
                     <div class=" BlockSearchItemInfo01Alt01 BlockSearchItemInfo01 LightScheme WidthTrans">
                         <span>Posted by : Admin</span>
                         <br />
                         <br />
-                        @Model.Country
+                        @Model.Location
                         <br />
                         <br />
                         <strong class="DarkScheme ShowItem Price">@Model.FormatedCost &euro;</strong>
@@ -102,7 +76,7 @@
                             <span>Type</span>@Model.TransactionTypeName
                         </p>
                         <p>
-                            <span>Country</span>@Model.Country
+                            <span>Location</span>@Model.Location
                         </p>
                         <p>
                             <span>Number of floors</span>@Model.NumberOfFloors
@@ -125,32 +99,6 @@
                 </div>
                 <div class="HrReplacement HrStyle06">
                     <hr class="Hidden" />
-                </div>
-                <div class="BlockPageNavigation NavigationButton1 BlockPageNavigationAlt02Mirror">
-                    <a href="#" title="Prev" class="BackBtn BackBtnSmall"><span>Prev</span></a>
-                    <div class="CenteringBlock">
-                        <ul class="PagingIndex">
-                            <li>
-                                <a href="#" title="">1</a>
-                            </li>
-                            <li>
-                                <span>2</span>
-                            </li>
-                            <li>
-                                <a href="#" title="">3</a>
-                            </li>
-                            <li>
-                                <a href="#" title="">4</a>
-                            </li>
-                            <li>
-                                <a href="#" title="">5</a>
-                            </li>
-                            <li>
-                                <a href="#" title="">...</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <a href="#" title="Next" class="NextBtn NextBtnSmall"><span>Next</span></a>
                 </div>
             </div>
         </div>
