--- a/Views/Renderings/Home/LoginBox.cshtml
+++ b/Views/Renderings/Home/LoginBox.cshtml
@@ -1,76 +1,72 @@
-﻿<div id="loginBox">
-    <div id="loginBoxHomeTop">
-        <h2> Login</h2>
-        <div class="InputLogin">
-            <!--Select-->
-            <form>
-                <div class=" FormItemSpacing02">
-                    <div class="ui-widget ui-widget-wrapper">
-                        <select name="" class="combobox" id="combobox">
-                            <option value="1" class="First" selected="selected">All residence</option>
-                            <option value="2">Type option 01 sdfdf 11 f f f 11 11</option>
-                            <option value="3">Type option 02 sdsf </option>
-                            <option value="4">Type option 03 sdfdsf</option>
-                            <option value="2">Type option 01 sdfsdf</option>
-                            <option value="3">Type option 02</option>
-                            <optgroup label="Group01">
-                                <option value="5">Type option 05</option>
-                                <option value="6">Type option 06</option>
-                                <option value="7">Type option 07</option>
-                            </optgroup>
-                            <optgroup label="Group02">
-                                <option value="5">Type option 08</option>
-                                <option value="6">Type option 09</option>
-                                <option value="7">Type option 10</option>
-                            </optgroup>
-                            <option value="4">Type option 03</option>
-                        </select>
+﻿@model Sitecore.Security.Accounts.User
+
+@if (Model == null)
+{
+    <div id="loginBox">
+        @using (Html.BeginRouteForm(Sitecore.Mvc.Configuration.MvcSettings.SitecoreRouteName, FormMethod.Post))
+        {
+            @Html.Sitecore().FormHandler("Home", "Login")
+            <div id="loginBoxHomeTop">
+                <h2> Login</h2>
+                <div class="InputLogin">
+                    <!--Login Input-->
+                    <fieldset>
+                        <legend>
+                            Search
+                        </legend>
+                        <div class="SelectInput">
+                            <input class="InputHome LightScheme" type="text" id="userName" name="userName" placeholder="Username" />
+                        </div>
+                        <div class="SelectInput">
+                            <input class="InputHome LightScheme" type="password" id="password" name="password" placeholder="Password" />
+                        </div>
+                        <p class="ForgotPass">
+                            <a href="/ForgotPassword">Forgot password?</a>
+                        </p>
+                    </fieldset>
+                </div>
+            </div>
+            <!--Login Fail-->
+            <div class="LoginBoxHomeHidden PaddingHiddenHome">
+                <div class="LoginButtonLeft">
+					<div class="LoginButtonRight">
+						<input type="button" value="Register" class="CommonFormBtn LoginButton" onclick="location.href='/Register'" />
+					</div>
+    			</div>
+                <div class="LoginButtonLeft">
+                    <div class="LoginButtonRight">
+                        <input type="submit" value="Login" class="CommonFormBtn LoginButton" />
                     </div>
                 </div>
-            </form>
-            <!--End Select-->
-            <!--Login Input-->
-            <form method="post" action="#">
-                <fieldset>
-                    <legend>
-                        Search
-                    </legend>
-                    <div class="SelectInput">
-                        <input class="InputHome LightScheme" type="text" value="Username" />
-                    </div>
-                    <div class="SelectInput">
-                        <input class="InputHome LightScheme" type="password" value="Password" />
-                    </div>
-                    <p class="ForgotPass">
-                        <a href="">Forgot password?</a>
-                    </p>
-                    <!--Change css-->
-                    <!--remove class in tag a, add " MarginLogin " in tag p-->
-                    <p class="ForgotPass MarginLogin">
-                        <a href="">Login with Google</a>
-                    </p>
-                    <!--Change css-->
-                    <span class="SavePass">
-                        <!--<a href="#">Se souvenir de moi </a>--> <a href="#">Remember me</a>
-                        <input type="checkbox" value="" class="CheckButton" />
-                    </span>
-                </fieldset>
-            </form>
-        </div>
-    </div>
-    <!--Login Fail-->
-    <div class="LoginBoxHomeHidden PaddingHiddenHome">
-        <div class="LoginButtonLeft">
-            <div class="LoginButtonRight">
-                <!--<input type="submit" value="connectez-vous" class="CommonFormBtn LoginButton" />-->
-                <input type="submit" value="Login" class="CommonFormBtn LoginButton" />
+                <div class="Clr"></div>
+                <label>
+                    @(new HtmlString(ViewBag.LoginFailMessage.ToString()))
+                </label>
             </div>
-        </div>
-        <div class="Clr"></div>
-        <label>
-            Login in error mesage!
-        </label>
+        }
     </div>
-    <div id="loginBoxHomeBottom">
+}
+else
+{
+    <div id="loginBox">
+        @using (Html.BeginRouteForm(Sitecore.Mvc.Configuration.MvcSettings.SitecoreRouteName))
+        {
+            @Html.Sitecore().FormHandler("Home", "Logout")
+            <div id="loginBoxSuccess">
+                <h3>
+                    You are Logged :-)
+                </h3>
+                <p class="WelcomeText DarkScheme">
+                    Welcome <a href="" class="DarkScheme">@Model.Profile.FullName</a> !
+                </p>
+                <!--Change-->
+                <div class="LogoutButtonLeft">
+                    <div class="LogoutButtonRight">
+                        <input type="submit" value="Logout" class="CommonFormBtn LogoutButton" />
+                    </div>
+                </div>
+                <!--Change-->
+            </div>
+        }
     </div>
-</div>
+}
