--- a/Views/Renderings/Home/RegisterBox.cshtml
+++ b/Views/Renderings/Home/RegisterBox.cshtml
@@ -1,17 +1,79 @@
-﻿
-@{
-    Layout = null;
-}
+﻿<div id="content">
+    <div id="innerContent01">
+        <div id="innerContent02">
+            <div id="mainContent">
+                <!-- Change -->
+                <h2 class="PageHeading DarkScheme">Register</h2>
+                <!-- Change -->
+                @using (Html.BeginRouteForm(Sitecore.Mvc.Configuration.MvcSettings.SitecoreRouteName, FormMethod.Post))
+                {
+                    @Html.Sitecore().FormHandler("Home", "Register")
+                    <fieldset>
+                        <div class="HrReplacement HrStyle02 HrSpacing01"><hr class="Hidden" /></div>
 
-<!DOCTYPE html>
+                        <div class="FormItem FormItemSpacing01 LightScheme ">
+                            <label class="TextLabel" for="email">First Name: </label>
+                            <div class="TextInputWrapper01 TextInputSize01">
+                                <div class="TextInputWrapper02">
+                                    <input type="text" name="firstName" id="firstName" class="TextInput LightScheme" required />
+                                </div>
+                            </div>
+                            <div class="Clr"></div>
+                        </div>
+                        <div class="FormItem FormItemSpacing01 LightScheme ">
+                            <label class="TextLabel" for="email">Last Name: </label>
+                            <div class="TextInputWrapper01 TextInputSize01">
+                                <div class="TextInputWrapper02">
+                                    <input type="text" name="lastName" id="lastName" class="TextInput LightScheme" required />
+                                </div>
+                            </div>
+                            <div class="Clr"></div>
+                        </div>
+                        <div class="FormItem FormItemSpacing01 LightScheme ">
+                            <label class="TextLabel" for="email">Email address: </label>
+                            <div class="TextInputWrapper01 TextInputSize01">
+                                <div class="TextInputWrapper02">
+                                    <input type="email" name="email" id="email" class="TextInput LightScheme" required />
+                                </div>
+                            </div>
+                            <div class="Clr"></div>
+                        </div>
+                        <div class="FormItem FormItemSpacing01 LightScheme ">
+                            <label class="TextLabel" for="email">Password: </label>
+                            <div class="TextInputWrapper01 TextInputSize01">
+                                <div class="TextInputWrapper02">
+                                    <input type="password" name="password" id="password" class="TextInput LightScheme" required />
+                                </div>
+                            </div>
+                            <div class="Clr"></div>
+                        </div>
+                        <div class="FormItem FormItemSpacing01 LightScheme ">
+                            <label class="TextLabel" for="email">Re-Password: </label>
+                            <div class="TextInputWrapper01 TextInputSize01">
+                                <div class="TextInputWrapper02">
+                                    <input type="password" name="re-password" id="re-password" class="TextInput LightScheme" required />
+                                </div>
+                            </div>
+                            <div class="Clr"></div>
+                        </div>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>RegisterBox</title>
-</head>
-<body>
-    <div> 
+                        <div class="HrReplacement HrStyle01"><hr class="Hidden" /></div>
+
+                        <div class="ButtonGroup ButtonGroupSpacing01 PaddingButton">
+                            <div class="FormButtonWrapper01">
+                                <div class="FormButtonWrapper02">
+                                    <input class="CommonFormBtn" type="submit" title="Register" value="Register" />
+                                </div>
+                            </div>
+                            <div class="FormButtonWrapper01">
+                                <div class="FormButtonWrapper02">
+                                    <input class="CommonFormBtn" type="reset" title="Cancel" value="Cancel" />
+                                </div>
+                            </div>
+                        </div>
+                    </fieldset>
+                 }
+            </div>
+        </div>
     </div>
-</body>
-</html>
+</div>
