--- a/Views/Renderings/Home/ForgotPasswordPage.cshtml
+++ b/Views/Renderings/Home/ForgotPasswordPage.cshtml
@@ -18,6 +18,7 @@
                                 </div>
                             </div>
                             <div class="Clr"></div>
+                            <p class="NewsLetterError MarginForgot">@ViewBag.InvalidEmail</p>
                         </div>
                         <div class="HrReplacement HrStyle01"><hr class="Hidden" /></div>
 
