--- a/Views/Renderings/Shared/TopNavBar.cshtml
+++ b/Views/Renderings/Shared/TopNavBar.cshtml
@@ -1,19 +1,25 @@
-﻿@model IDictionary<string, string>
+﻿@model dynamic
+@using SitecoreCaseStudy.Models;
 
 <div id="navigationBlockHome">
     <ul id="mainNav">
-        <li @*class="Active"*@><a href="/HomeCaseStudy" title="Home">Home</a></li>
-        <li><a href="/Residences" title="Residences">Residences</a></li>
-        <li><a href="/TransactionList" title="Transactions">Transactions</a></li>
-        <li><a href="/NewsList" title="News">News</a></li>
-        <li><a href="/Contact" title="Contact">Contact</a></li>
+        @foreach (Navigation navigation in Model.Navigations)
+        {
+            <li class="@navigation.ActiveClass"><a href="@navigation.NavigationLink" title="@navigation.NavigationTitle">@navigation.NavigationTitle</a></li>
+        }
     </ul>
     <ul id="languageSelection">
-        @foreach (var language in Model)
+        @foreach (var language in Model.Languages)
         {
-            <li><a href="@language.Value" title="@language.Key">@language.Key</a></li>
+            <li id="@language.Key"><a href="@language.Value" title="@language.Key">@language.Key</a></li>
         }
     </ul>
     <div class="Clr">
     </div>
 </div>
+<script>
+    window.onload = function () {
+        var language = '@ViewBag.CurrentLanguage';
+        document.getElementById(language).className = "Active";      
+    };
+</script>
