Done sitemap + robots + redirect when item not found

--- a/Views/Layouts/OthersLayout.cshtml
+++ b/Views/Layouts/OthersLayout.cshtml
@@ -9,6 +9,7 @@
     <title>Building Bell</title>
     <link rel="stylesheet" href="~/Content/css/global.css" type="text/css" media="all" />
     <link rel="stylesheet" href="~/Content/css/master.css" type="text/css" media="all" />
+    <link rel="stylesheet" href="~/Content/css/PagedList.css" type="text/css" />
     <link rel="stylesheet" type="text/css" href="~/Content/css/smaller.css" media="only screen and (max-width: 1080px)" />
     <!--j-carousel-->
     <link rel="stylesheet" href="~/Content/css/j-carousel.css" type="text/css" />
