--- a/Views/Renderings/Transaction/TransactionList.cshtml
+++ b/Views/Renderings/Transaction/TransactionList.cshtml
@@ -1,9 +1,16 @@
-﻿@model List<SitecoreCaseStudy.Models.Transaction>
+﻿@using PagedList.Mvc;
+@using Sitecore.Links;
+@model PagedList.IPagedList<SitecoreCaseStudy.Models.Transaction>
 
 <div id="content">
     <div id="innerContent01">
         <div id="innerContent02">
             <div id="mainContent">
+                <!-----Change----------->
+                <h2 class="PageHeading DarkScheme TitleLeft">Transactions</h2>
+                <!-----Change----------->
+                <div class="Clr">
+                </div>
                 @using (Html.BeginRouteForm(Sitecore.Mvc.Configuration.MvcSettings.SitecoreRouteName, FormMethod.Post))
                 {
                     @Html.Sitecore().FormHandler("Transaction", "TransactionSearch")
@@ -17,8 +24,6 @@
                                     </div>
                                 </div>
                             </td>
-                        </tr>
-                        <tr>
                             <td>
                                 <div class="FormButtonWrapper01 MarginSearchButton">
                                     <div class="FormButtonWrapper02">
@@ -30,30 +35,9 @@
                     </table>
                 }
                 <div class="BlockPageNavigation BlockPageNavigationSpacing01">
-                    <a href="#" title="Prev" class="BackBtn BackBtnSmall"><span>Prev</span></a>
                     <div class="CenteringBlock">
-                        <ul class="PagingIndex">
-                            <li>
-                                <a href="#" title="">1</a>
-                            </li>
-                            <li>
-                                <span>2</span>
-                            </li>
-                            <li>
-                                <a href="#" title="">3</a>
-                            </li>
-                            <li>
-                                <a href="#" title="">4</a>
-                            </li>
-                            <li>
-                                <a href="#" title="">5</a>
-                            </li>
-                            <li>
-                                <a href="#" title="">...</a>
-                            </li>
-                        </ul>
+                        @Html.PagedListPager(Model, page => LinkManager.GetItemUrl(Sitecore.Context.Item) + "?page=" + page)
                     </div>
-                    <a href="#" title="Next" class="NextBtn NextBtnSmall"><span>Next</span></a>
                 </div>
                 <div class="HrReplacement HrStyle02">
                     <hr class="Hidden" />
@@ -87,30 +71,9 @@
                     <hr class="Hidden" />
                 </div>
                 <div class="BlockPageNavigation2 BlockPageNavigationMirror BlockPageNavigationMirrorSpacing01">
-                    <a href="#" title="Prev" class="BackBtn BackBtnSmall"><span>Prev</span></a>
                     <div class="CenteringBlock">
-                        <ul class="PagingIndex">
-                            <li>
-                                <a href="#" title="">1</a>
-                            </li>
-                            <li>
-                                <span>2</span>
-                            </li>
-                            <li>
-                                <a href="#" title="">3</a>
-                            </li>
-                            <li>
-                                <a href="#" title="">4</a>
-                            </li>
-                            <li>
-                                <a href="#" title="">5</a>
-                            </li>
-                            <li>
-                                <a href="#" title="">...</a>
-                            </li>
-                        </ul>
+                        @Html.PagedListPager(Model, page => LinkManager.GetItemUrl(Sitecore.Context.Item) + "?page=" + page)
                     </div>
-                    <a href="#" title="Next" class="NextBtn NextBtnSmall"><span>Next</span></a>
                 </div>
             </div>
         </div>
