--- a/Views/Renderings/Home/SetNewPasswordPage.cshtml
+++ b/Views/Renderings/Home/SetNewPasswordPage.cshtml
@@ -27,14 +27,14 @@
                                 </div>
                             </div>
                             <div class="Clr"></div>
-                            <p class="NewsLetterError MarginForgot" id="InvalidOTP"></p>
+                            <p class="NewsLetterError MarginForgot" id="InvalidOTP">@ViewBag.OTPIncorrect</p>
                         </div>
                         <div class="HrReplacement HrStyle01"><hr class="Hidden" /></div>
 
                         <div class="ButtonGroup ButtonGroupSpacing01 PaddingButton">
                             <div class="FormButtonWrapper01">
                                 <div class="FormButtonWrapper02">
-                                    <input class="CommonFormBtn" type="submit" title="Submit" value="Submit" onclick="return confirmOTP(@ViewBag.OTP) == true;"/>
+                                    <input class="CommonFormBtn" type="submit" title="Submit" value="Submit"/>
                                 </div>
                             </div>
                             <div class="FormButtonWrapper01">
@@ -49,7 +49,7 @@
         </div>
     </div>
 </div>
-<script>
+@*<script>
         function confirmOTP(otp) {
             var confirm = document.getElementById("otp").value;
             if (confirm == otp) {
@@ -58,4 +58,4 @@
                 document.getElementById("InvalidOTP").innerHTML = "OTP Incorrect!!";
             }
         }
-</script>
+</script>*@
