Done 7/12 advanced requirement

--- a/Views/Renderings/Home/RegisterBox.cshtml
+++ b/Views/Renderings/Home/RegisterBox.cshtml
@@ -37,6 +37,7 @@
                                 </div>
                             </div>
                             <div class="Clr"></div>
+                            <p class="NewsLetterError MarginForgot" id="errorEmail">@ViewBag.ExistedEmail</p>
                         </div>
                         <div class="FormItem FormItemSpacing01 LightScheme ">
                             <label class="TextLabel" for="email">Password: </label>
